# sysprog_auto-s

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  GRADING_1.md  GRADING_1.md.jinja  GRADING_2.md  GRADING_2.md.jinja  LICENCE.md  README.md  README.md.jinja  REPORT_1.md  REPORT_1.md.jinja  REPORT_2.md  REPORT_2.md.jinja  cputest.carbrain_asm  glm_demo_main.cpp  level0.carbrain_exe  level1.carbrain_asm  level1.carbrain_exe  level2.carbrain_asm  level2.carbrain_exe  level3.carbrain_asm  level3.carbrain_exe  lsan.supp  spg.code-workspace  spg_edit.c  spg_game.c  spg_part1_edit_piexe  spg_part1_edit_ubuexe  spg_part1_piexe  spg_part1_ubuexe  spg_part2_piexe  spg_part2_test_main.cpp  spg_part2_ubuexe  valgrind.supp  wallbump.carbrain_asm
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.md.jinja  feature_request.md  feature_request.md.jinja  questions---problems.md  questions---problems.md.jinja  sprint.md  sprint.md.jinja
game/carbrain/: carbrain_es_integration.h  carbrain_io.c  carbrain_io.h
game/carbrain/part1/: carbrain_es_integration.c
game/carbrain/part2/: Assembler.cpp  Assembler.h  BitHelper.h  Board.cpp  Board.h  Bus.cpp  Bus.h  CPU.cpp  CPU.h  CPUInstruction.cpp  CPUInstruction.h  Constants.h  DecisionOutput.cpp  DecisionOutput.h  Exceptions.cpp  Exceptions.h  Mem.cpp  Mem.h  Module.cpp  Module.h  Sensors.cpp  Sensors.h  carbrain_es_integration.cpp
game/es/: assemblage.c  assemblage.h  component_enums.h  component_structs.h  engine.c  engine.h  es_memory_manager.c  es_memory_manager.h  es_memory_manager_collections.c  es_memory_manager_collections.h  game.c  game.h  game_util.c  game_util.h
game/es/system/: automove_c_system.c  automove_c_system.h  camera_system.c  camera_system.h  carbrain_decision_system.c  carbrain_decision_system.h  carbrain_sensor_system.c  carbrain_sensor_system.h  dragging_system.c  dragging_system.h  edit_system.c  edit_system.h  endlevel_system.c  endlevel_system.h  filter_system.c  filter_system.h  input_system.c  input_system.h  levelloader_system.c  levelloader_system.h  move_system.c  move_system.h  render_system.c  render_system.h
game/graphics/: hardcoded_3d_art.c_snippet  hardcoded_iso_art.c_snippet  renderer_3d.c  renderer_3d.h  renderer_isometric.c  renderer_isometric.h  sdl_graphics.c  sdl_graphics.h  spgsdl_texture.c  spgsdl_texture.h
game/level/: c_levelloader.c  c_levelloader.h  c_levelwriter.c  c_levelwriter.h  fixed_level_info.c  fixed_level_info.h  hardcoded_level3x3.hardcoded_level  hardcoded_level_0.hardcoded_level  hardcoded_level_1.hardcoded_level  hardcoded_level_2.hardcoded_level  hardcoded_level_3.hardcoded_level  hardcoded_level_4.hardcoded_level  hardcoded_levels.c  hardcoded_levels.h  level.c  level.h
game/level/level_files/: demo.blvl  demo_nosame.blvl  level0.blvl  level0_nosame.blvl  level1.blvl  level1_nosame.blvl  level2.blvl  level2_nosame.blvl  level3.blvl  level3_nosame.blvl
libraries/glm/glm/: common.hpp
libraries/glmc/include/: glmc.h
libraries/glmc/src/: glmc_matrix.c
tests/part1/: spg_part1_tests_main.c  test_binary_game_levels.c  test_binary_game_levels.h
tests/part2/: BitReader-test.cpp  BitWriter-test.cpp  Bus-test.cpp  CPU-test.cpp  InstructionDecode-test.cpp  InstructionEncode-test.cpp
textures/: art-LICENSE.md
util/: catch.hpp  glm_helper.cpp  glm_helper.h  util.c  util.h
